# Uplink

./: .eslintrc.json  .gitignore  .vscodeignore  CLAUDE.md  PROJECT_MAP.md  README.md  deploy-prod.sh  deploy.sh  package-lock.json  package.json  refactoring.md  tsconfig.json  tsconfig.webview.json  webpack.config.js
.claude/: CLAUDE.md  settings.json
.claude/commands/: infra.md  push.md  refresh_docs.md  review.md  scaffold.md  start.md  status.md  task.md  test.md
.github/workflows/: build-desktop.yml  deploy-production.yml  post-deploy-setup.yml
Tasks/backlog/: 003_matrix_client_auth.md  005_livekit_audio_calls.md  008_fix_e2e_encryption.md  010_deploy_homelab.md  010_lan_access.md  017_livekit_cloud_video.md
Tasks/done/: 001_docker_infrastructure.md  002_vscode_extension_scaffold.md  003_matrix_client_auth.md  004_chat_webview_slack_ui.md  005_livekit_audio_calls.md  006_test_users_and_messages.md  007_web_app_chat.md  008_fix_e2e_encryption.md  009_fix_web_dev_and_prod.md  011_cloudflare_tunnel.md  011_tailscale_https.md  012_user_directory_dm.md  013_calls_in_dm.md  014_calls_cloud_turn.md  014_calls_through_tunnel.md  (+28 more)
docker/: .env  .env.example  docker-compose.production.yml  docker-compose.yml
docs/: disaster-recovery.md  federation.md  setup.md
scripts/: backup-db.sh  backup-media.sh  clean-start.sh  create-user.sh  create-users.ps1  create-users.sh  create-voice-channel.sh  deploy-remote.sh  deploy.ps1  generate-icons.py  maintenance.html  rebuild-all.ps1  seed-test-data.mjs  setup-tls.sh
src/: extension.ts
test/: runTest.ts
vscode/: .vscodeignore  LICENSE  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
web/: .eslintrc.json  .prettierignore  .prettierrc  Dockerfile  index.html  nginx-http.conf  nginx-limits.conf  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs  main.rs
(+218 files in other folders)
