[package]
name = "uplink"
version = "0.1.0"
description = "Uplink — контекстный коммуникатор для разработчиков"
authors = ["Uplink Team"]
edition = "2021"

[lib]
name = "uplink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
